# pymol_feature_paintor

./: .gitignore  README.md  pyproject.toml  uniprot_search_Q1EHB4.json
cli/: __init__.py  alphafold_prediction_json.py  uniprot_search_json.py
examples/: domains_demo.csv
src/api/: __init__.py  alphafold.py  base.py  pipeline.py  uniprot.py
src/converter/: __init__.py  color_palette.py  constractor.py  csv_loader.py  feature_aggregation.py  pipeline.py
src/core/: api_response_validation.py  cache.py  http.py  models.py  paths.py
src/molpaint/painter/: __init__.py  painter.py
src/plugin/: __init__.py  fetch_af_structure.py  paint_feature.py  plugin_test.py
src/services/: alphafold_extractor.py  sequence_validation.py  uniprot_extractor.py
tests/: test_alphafold_api.py  test_feature_extract.py
